# fec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static.yml
export/: export_to_parquet.py
import/: RAW_TABLES.sql  RUN_FIRST.sql  fec_dataset.py  main.py  setup_db.sql
transform/: dbt_project.yml
transform/macros/: generate_schema_name.sql
transform/models/: sources.yaml
transform/models/analytics/: committee_contribution_summary_view.sql
transform/models/dimensional/: committee_contribution_view.sql  dim_ammendment_code.sql  dim_candidate.sql  dim_candidate_status.sql  dim_candidate_view.sql  dim_committee.sql  dim_committee_designation.sql  dim_committee_filing_frequency.sql  dim_committee_type.sql  dim_committee_view.sql  dim_entity_type.sql  dim_incumbent_challenger_status.sql  dim_interest_group_category.sql  dim_office.sql  dim_party.sql  dim_primary_general_indicator.sql  dim_report_type.sql  dim_state.sql  dim_transaction_type.sql  fact_committee_contribution.sql  fact_individual_contribution.sql  schema.yaml
transform/models/raw/: schema.yaml
transform/models/staging/: candidate.sql
transform/seeds/: ammendment_code.csv  candidate_status.csv  committee_designation.csv  committee_filing_frequency.csv  committee_type.csv  entity_type.csv  incumbent_challenger_status.csv  interest_group_category.csv  office.csv  party.csv  primary_general_indicator.csv  report_type.csv  state.csv  transaction_type.csv
web/: index.html
web/css/: style.css
web/data/: committee_contributions.parquet
web/js/: app.js  site.js
(+6 files in other folders)
